src/tests/snapshots/alloy__tests__snapshot_tests@variables.alloy-2.snap
---
source: src/tests/mod.rs
expression: ast.unwrap()
input_file: src/tests/cases/variables.alloy
---
Ast(
    [
        Expression {
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    kind: LiteralInt(
                        2,
                    ),
                    span: Span(
                        5,
                        6,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                0,
                6,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "b",
                value: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        12,
                        13,
                    ),
                },
                mutable: true,
                ty: None,
            },
            span: Span(
                7,
                13,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "c",
                value: Expression {
                    kind: Infix {
                        op: Add,
                        lh: Expression {
                            kind: Ident(
                                "a",
                            ),
                            span: Span(
                                23,
                                24,
                            ),
                        },
                        rh: Expression {
                            kind: Ident(
                                "b",
                            ),
                            span: Span(
                                27,
                                28,
                            ),
                        },
                    },
                    span: Span(
                        23,
                        28,
                    ),
                },
                mutable: true,
                ty: Some(
                    VarType(
                        "Int",
                    ),
                ),
            },
            span: Span(
                14,
                28,
            ),
        },
        Expression {
            kind: Prefix {
                op: Not,
                rh: Expression {
                    kind: Ident(
                        "c",
                    ),
                    span: Span(
                        30,
                        31,
                    ),
                },
            },
            span: Span(
                29,
                31,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "d",
                value: Expression {
                    kind: LiteralBool(
                        true,
                    ),
                    span: Span(
                        39,
                        43,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                34,
                43,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "e",
                value: Expression {
                    kind: LiteralBool(
                        false,
                    ),
                    span: Span(
                        49,
                        54,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                44,
                54,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "f",
                value: Expression {
                    kind: Prefix {
                        op: Not,
                        rh: Expression {
                            kind: Ident(
                                "d",
                            ),
                            span: Span(
                                62,
                                63,
                            ),
                        },
                    },
                    span: Span(
                        61,
                        63,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                56,
                63,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "g",
                value: Expression {
                    kind: Prefix {
                        op: Not,
                        rh: Expression {
                            kind: Prefix {
                                op: Not,
                                rh: Expression {
                                    kind: Ident(
                                        "e",
                                    ),
                                    span: Span(
                                        71,
                                        72,
                                    ),
                                },
                            },
                            span: Span(
                                70,
                                72,
                            ),
                        },
                    },
                    span: Span(
                        69,
                        72,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                64,
                72,
            ),
        },
    ],
)
